--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -6,55 +6,61 @@
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
       <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="2">
-      <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['required']">O campo nome deve ser preenchido.</span>
-      <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['minlength']">O nome deve ter no mínimo 2 caracteres.</span>
+
+      <div *ngIf="(f.controls['nome']?.invalid && f.controls['nome']?.touched) || f.controls   ['nome']?.dirty">
+         <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['required']">O campo nome deve ser preenchido.</span>
+          <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['minlength']">O nome deve ter no mínimo 2 caracteres.</span>
+      </div>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita"/>
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel/>
       </div>
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita"/>
+        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel />
       </div>
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
-      <input name="email" id="email" type="email" class="campo__escrita"/>
+      <input name="email" id="email" type="email" class="campo__escrita" ngModel required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"/>
     </div>
-
+    <div *ngIf="(f.controls['email']?.invalid && f.controls['email']?.touched) || f.controls   ['email']?.dirty">
+      <span class="erro__texto" *ngIf="f.controls['email']?.errors?.['required']">O campo de email deve ser preenchido.</span>
+       <span class="erro__texto" *ngIf="f.controls['pattern']?.errors">O campo de e-mail deve seguir este padrao: "exemplo@dominio.com".</span>
+    </div>
 
     <h3 class="principal__subtitulo">Endereço</h3>
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
-      <input name="cep" id="cep" class="campo__escrita" />
+      <input name="cep" id="cep" class="campo__escrita" ngModel/>
       <div id="erro"></div>
     </div>
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="endereco">Endereço</label>
-      <input name="endereco" id="endereco" class="campo__escrita" />
+      <input name="endereco" id="endereco" class="campo__escrita" ngModel/>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="numero">Numero</label>
-        <input name="numero" id="numero" class="campo__escrita" />
+        <input name="numero" id="numero" class="campo__escrita" ngModel/>
       </div>
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="complemento">Complemento</label>
-        <input name="complemento" id="complemento" class="campo__escrita" />
+        <input name="complemento" id="complemento" class="campo__escrita" ngModel/>
       </div>
     </div>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="bairro">Bairro</label>
-      <input name="bairro" id="bairro" class="campo__escrita" />
+      <input name="bairro" id="bairro" class="campo__escrita" ngModel/>
     </div>
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="cidade">Cidade</label>
-        <input name="cidade" id="cidade" class="campo__escrita" />
+        <input name="cidade" id="cidade" class="campo__escrita" ngModel/>
       </div>
 
       <div class="formulario__campo">
