--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -3,36 +3,44 @@
 
   <form class="principal__formulario" id="formulario" #f="ngForm" (ngSubmit)="cadastrar(f)">
     <h3 class="principal__subtitulo">Dados pessoais</h3>
+
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="nome">Nome Completo</label>
-      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="2">
-
-      <div *ngIf="(f.controls['nome']?.invalid && f.controls['nome']?.touched) || f.controls   ['nome']?.dirty">
-         <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['required']">O campo nome deve ser preenchido.</span>
-          <span class="erro__texto" *ngIf="f.controls['nome']?.errors?.['minlength']">O nome deve ter no mínimo 2 caracteres.</span>
+      <input name="nome" id="nome" class="campo__escrita" ngModel required minlength="2" #nome="ngModel">
+      <div *ngIf="(nome?.invalid && nome?.touched) || nome?.dirty">
+         <app-mensagem *ngIf="nome?.errors?.['required']" mensagem="O campo nome deve ser preenchido."></app-mensagem>
+         <app-mensagem *ngIf="nome?.errors?.['minlength']" mensagem="O nome deve ter no mínimo 2 caracteres."></app-mensagem>
       </div>
     </div>
+
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
         <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel/>
       </div>
+
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" ngModel />
+        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" required ngModel pattern="\d{11}" #contato="ngModel" />
+        <div *ngIf="(contato?.invalid && contato?.touched) || contato?.dirty">
+          <app-mensagem *ngIf="contato?.errors?.['required']" mensagem="O campo de contato deve ser preenchido."></app-mensagem>
+          <app-mensagem *ngIf="contato?.errors?.['pattern']" mensagem="O valor informado não é um telefone válido."></app-mensagem>
+        </div>
       </div>
     </div>
+
+
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
-      <input name="email" id="email" type="email" class="campo__escrita" ngModel required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"/>
+      <input name="email" id="email" type="email" class="campo__escrita" ngModel required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" #email="ngModel" />
     </div>
-    <div *ngIf="(f.controls['email']?.invalid && f.controls['email']?.touched) || f.controls   ['email']?.dirty">
-      <span class="erro__texto" *ngIf="f.controls['email']?.errors?.['required']">O campo de email deve ser preenchido.</span>
-       <span class="erro__texto" *ngIf="f.controls['pattern']?.errors">O campo de e-mail deve seguir este padrao: "exemplo@dominio.com".</span>
+
+    <div *ngIf="(email?.invalid && email?.touched) || email?.dirty">
+      <app-mensagem *ngIf="email?.errors?.['required']" mensagem="O campo de email deve ser preenchido."></app-mensagem>
+      <app-mensagem *ngIf="email?.errors?.['pattern']"  mensagem="O campo de e-mail deve seguir este padrao: 'exemplo@dominio.com'."></app-mensagem>
     </div>
 
     <h3 class="principal__subtitulo">Endereço</h3>
-
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
       <input name="cep" id="cep" class="campo__escrita" ngModel/>
