--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -16,19 +16,22 @@
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel/>
+        <input name="nascimento" id="nascimento" type="date" class="campo__escrita" ngModel required  maiorIdadeValidator #nascimento="ngModel"/>
+        <div *ngIf="(nascimento?.invalid && nascimento?.touched) || nascimento?.dirty">
+           <app-mensagem *ngIf="nascimento?.errors?.['required']" mensagem="data de nascimento deve ser preenchida."></app-mensagem>
+           <app-mensagem *ngIf="nascimento?.errors?.['maiorIdadeValidator']" mensagem="O usuário deve ter mais de 18 anos."></app-mensagem>
+       </div>
       </div>
 
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="telefone">Contato</label>
-        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" required ngModel pattern="\d{11}" #contato="ngModel" />
+        <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita" required ngModel pattern="(\(\d{2}\)\s)(\d{4,5}\-\d{4})" #contato="ngModel" />
         <div *ngIf="(contato?.invalid && contato?.touched) || contato?.dirty">
           <app-mensagem *ngIf="contato?.errors?.['required']" mensagem="O campo de contato deve ser preenchido."></app-mensagem>
           <app-mensagem *ngIf="contato?.errors?.['pattern']" mensagem="O valor informado não é um telefone válido."></app-mensagem>
         </div>
       </div>
     </div>
-
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="email">E-mail</label>
@@ -43,8 +46,11 @@
     <h3 class="principal__subtitulo">Endereço</h3>
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="cep">CEP</label>
-      <input name="cep" id="cep" class="campo__escrita" ngModel/>
-      <div id="erro"></div>
+      <input name="cep" id="cep" class="campo__escrita" ngModel required #cep="ngModel" pattern="^(\d{5})(-?\d{3})$" minlength="8" maxlength="9" (blur)="consultaCEP($event, f)"/>
+      <div *ngIf="(cep?.invalid && cep?.touched) || cep?.dirty">
+        <app-mensagem *ngIf="cep?.errors?.['required']" mensagem="O campo e cep é obrigatório"></app-mensagem>
+        <app-mensagem *ngIf="cep?.errors?.['pattern']" mensagem="O campo de cep deve seguir este exemplo: 00000-000"></app-mensagem>
+      </div>
     </div>
 
     <div class="formulario__campo">
